--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'Main Branch Status Check'
 description: 'Checks if the main branch is green before allowing PR to proceed. Designed for pull_request events.'
-author: 'Your Name'
+author: 'Debuide Org'
 
 inputs:
   github-token:
