--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: 'GitHub token for API access'
     required: true
     default: ${{ github.token }}
-  main-branch:
+  base-branch:
     description: 'Name of the main branch to check'
     required: false
     default: 'main'
