--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Main Branch Status Check'
+name: 'Base Branch Status Check'
 description: 'Checks if the main branch is green before allowing PR to proceed. Designed for pull_request events.'
 author: 'Debuide Org'
 
