--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
+    "@actions/core": "1.11.0",
     "axios": "^1.8.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1"
+  },
+  "engines": {
+    "node": ">= 20",
+    "yarn": ">= 1"
   }
 }
