--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Debuide Org",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "1.11.0",
+    "@actions/core": "^1.11.0",
+    "@actions/github": "^6.0.0",
     "axios": "^1.8.0"
   },
   "devDependencies": {
